--- a/src/Components/Home/ContactForm/ContactForm.css
+++ b/src/Components/Home/ContactForm/ContactForm.css
@@ -1,3 +1,8 @@
+.contact-container{
+  background-color: #FBD062;
+  margin-top: 150px;
+}
+
 .form-group>input::placeholder, .form-group>textarea::placeholder{
     opacity: 0.6; 
     font-size: 15px;
