--- a/src/Components/Home/Works/Works.css
+++ b/src/Components/Home/Works/Works.css
@@ -1,5 +1,12 @@
+
+.carousel-container{
+    background-color: #111430;
+}
 .carousel-indicators li{
     width: 10px;
     height: 10px;
     border-radius: 50%;
+}
+.works-heading{
+    font-weight: 700;
 }
