--- a/src/Components/Pages/Admin/AddService/AddService.css
+++ b/src/Components/Pages/Admin/AddService/AddService.css
@@ -15,3 +15,36 @@
     margin-top: 15px;
     margin-right:22%;
 }
+.upload-image{
+    border: none;
+}
+.upload-image::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+.upload-image::before {
+    content: 'Upload Image';
+    display: inline-block;
+    background-color: #DEFFED;
+    background-image: url(../../../../images/icons/cloud-upload-outline\ 1.png);
+    background-repeat: no-repeat;
+    background-position: left 20px center;
+    border: 2px solid #009444;
+    border-radius: 10px;
+    padding: 8px 55px;
+    margin-right: -100px;
+    margin-top: -5px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+    color: #009444;
+  }
+  .upload-image:hover::before {
+    border-color: 2px solid #009444;
+  }
+  .upload-image:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  }
